# miniRT

./: CMakeLists.txt  Makefile  MakefileMac
gnl/: get_next_line.c  get_next_line_utils.c
includes/: ambient_light.h  calc_pixel_color.h  camera.h  camera_direction_calc.h  color.h  config.h  cylinder.h  get_next_line.h  hooks.h  intersection.h  light.h  minirt.h  mlx_struct.h  parser.h  plane.h  ray.h  ray_tracing_struct.h  scene.h  sphere.h  utils.h  vector.h  view_plane.h
mlx_linux/test/: mlx-test
scene/: Camera_pos_dir.rt  Camera_pos_dir_2.rt  Camera_pos_dir_3.rt  Camera_pos_dir_4.rt  Multi_objects_0.rt  Multy_objects.rt  basic.rt  basic_2.rt  basic_3.rt  brightness_1.rt  brightness_3.rt  brigntness_2.rt  brigthness_4.rt  camera.c  scene.c  translation_rotation_2.rt  translation_rotation_3.rt
srcs/: main.c
srcs/figures/: sphere.c
srcs/geometry/: vector.c
srcs/parser/: color_hex.c  ft_split.c  parse.c  parse_figures.c  parse_scene.c  parse_utils.c  parse_utils_2.c  parse_utils_3.c
srcs/render/: add_color.c  ambient_light.c  calc_pixel_color.c  camera.c  camera_direction_calc.c  cylinder.c  cylinder_caps_pipe.c  hooks.c  intersection.c  light.c  mlx_image.c  plane.c  ray.c  ray_tracing.c  scene.c  solve_quadratic_equation.c  sphere.c  vector.c  vector_stack.c
srcs/utils/: error_exit.c  lists_operator.c
